<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:wang="http://schemas.android.com/apk/res/com.example.changku"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp" 
        android:orientation="horizontal">
       
        <com.example.changku.ChangeIconWithOrText
            android:id="@+id/changku_tab_one"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            wang:icons="@drawable/basic_info_icon"
            wang:colors="#ff45c01a"
            wang:text="@string/basic_info"
            wang:text_size="12sp"
            />
         <com.example.changku.ChangeIconWithOrText
             android:id="@+id/changku_tab_two"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            wang:icons="@drawable/stock_control"
            wang:colors="#ff45c01a"
            wang:text="@string/stock_control"
            wang:text_size="12sp"
            />
           <com.example.changku.ChangeIconWithOrText
               android:id="@+id/changku_tab_three"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            wang:icons="@drawable/info_search_icon"
            wang:colors="#ff45c01a"
            wang:text="@string/info_search"
            wang:text_size="12sp"
            />
           <com.example.changku.ChangeIconWithOrText
               android:id="@+id/changku_tab_four"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            wang:icons="@drawable/user_control"
            wang:colors="#ff45c01a"
            wang:text="@string/user_control"
            wang:text_size="12sp"
            />
           <com.example.changku.ChangeIconWithOrText
               android:id="@+id/changku_tab_five"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            wang:icons="@drawable/about_me"
            wang:colors="#ff45c01a"
            wang:text="@string/about_me"
            wang:text_size="12sp"
            />
    </LinearLayout>
 	 <android.support.v4.view.ViewPager
 	    android:id="@+id/changku_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />  
</LinearLayout>
