<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/re_username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bgs"
        android:ems="12"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/re_password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bgs"
        android:ems="12"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
         android:layout_marginTop="10dp" >

        <EditText
            android:id="@+id/re_phonenum"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/edittext_bgs"
            android:ems="8"
            android:hint="@string/phonenum"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:textSize="18sp"
            android:layout_marginLeft="10dp" 
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/validation"
            android:layout_marginLeft="5dp" 
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/validation"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/but_register"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/register"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>